# ada-util

./: .gitignore  .travis.yml  Makefile  Makefile.conf.in  Makefile.defaults  Makefile.in  NEWS  NEWS.md  NOTICE.txt  README  README.md  aclocal.m4  alire-aws.toml  alire-curl.toml  alire-lzma.toml  alire-unit.toml  alire-xml.toml  alire.toml  config.gpr  config.gpr.in  config.status  configure  configure.ac  configure.in  coverage.sh  dynamo.xml  mkdocs.yml  samples.gpr  shared.gpr  tests.gpr  tests_proc.gpr  testutil.gpr  testutil.gpr.in  util.gpr  util.gpr.in  util_http.gpr.in  util_http_aws.gpr.in  util_http_curl.gpr.in  util_tests.gpr  util_unit.gpr.in  (+20 more)
.alire/: utilada_aws.gpr  utilada_base.gpr  utilada_conf.gpr  utilada_config.gpr  utilada_core.gpr  utilada_curl.gpr  utilada_http.gpr  utilada_lzma.gpr  utilada_sys.gpr  utilada_unit.gpr  utilada_xml.gpr
aws/: alire.toml  utilada_aws.gpr
bundles/: dates.properties
curl/: alire.toml  utilada_curl.gpr
debian/: ada_libraries  changelog  control  copyright  docs  examples.gpr  (+16 more)
trunk/: Makefile.in  NEWS  NOTICE.txt  README  ada-util.gpr  aunit-to-junit.xsl  config.gpr  config.gpr.in  config.status  configure  configure.in  samples.gpr  tests.gpr  testutil.gpr  testutil.gpr.in  util.gpr  util.gpr.in  util_http.gpr.in  util_http_aws.gpr.in  util_http_curl.gpr.in
trunk/bundles/: dates_fr.properties
trunk/debian/: README  changelog  control  copyright  docs  libada-util-aws-dev.postinst  libada-util-curl-dev.install  libada-util-curl-dev.postinst  libada-util-dev.install  libada-util1.7.lintian-overrides  postrm.ex  rules  watch.ex
trunk/distrib/: testutil.gpr.in  util.gpr.in  util_http.gpr.in  util_http_aws.gpr.in  util_http_curl.gpr.in  util_unit.gpr.in
trunk/regtests/: test.properties  util-beans-objects-datasets-tests.ads  util-beans-objects-discrete_tests.adb  util-beans-objects-discrete_tests.ads  util-beans-objects-discretes.ads  util-beans-objects-record_tests.adb  util-beans-objects-record_tests.ads  util-concurrent-tests.adb  util-concurrent-tests.ads  util-dates-formats-tests.adb  util-dates-formats-tests.ads  util-encoders-tests.adb  util-encoders-tests.ads  util-events-channels-tests.adb  util-events-channels-tests.ads  util-files-tests.adb  util-files-tests.ads  util-http-clients-tests.adb  util-http-clients-tests.ads  util-http-cookies-tests.ads  util-listeners-tests.adb  util-listeners-tests.ads  util-locales-tests.adb  util-locales-tests.ads  util-log-tests.adb  util-log-tests.ads  util-perfect_hash.ads  util-processes-tests.adb  util-processes-tests.ads  util-properties-bundles-tests.adb  util-properties-json-tests.ads  util-properties-tests.adb  util-properties-tests.ads  util-property-testsuite.adb  util-serialize-io-csv-tests.adb  util-serialize-io-csv-tests.ads  util-serialize-io-json-tests.adb  util-serialize-io-json-tests.ads  util-serialize-io-xml-tests.adb  util-serialize-io-xml-tests.ads  (+17 more)
trunk/regtests/bundles/: bundle.properties  bundle_en_GB.properties
trunk/regtests/dlls/: util-systems-dlls-tests.adb  util-systems-dlls-tests.ads
trunk/regtests/files/: test-1.json
trunk/regtests/prog/: util_test_process.adb
trunk/samples/: city_mapping.adb  csv_reader.adb  cut.adb  date.adb  demo-atlas.xmi  encodes.adb  escape.adb  facebook.adb  google.xrds  gperfhash.adb  json.adb  launch.adb  log.adb  mapping.adb  mapping.ads  messages.properties  multipro.adb  multipro_refs.adb  popen.adb  test.properties  wget.adb  xmi.adb  xmlrd.adb
trunk/src/: util-algorithms.ads  util-beans-basic-lists.adb  util-beans-basic-lists.ads  util-beans-basic-ranges.ads  util-beans-basic.ads  util-beans-factory.adb  util-beans-factory.ads  util-beans-lists-strings.adb  util-beans-lists-strings.ads  util-beans-methods.ads  util-beans-objects-datasets.adb  util-beans-objects-datasets.ads  util-beans-objects-enums.adb  util-beans-objects-hash.adb  util-beans-objects-maps.adb  util-beans-objects-maps.ads  util-beans-objects-pairs.adb  util-beans-objects-pairs.ads  util-beans-objects-time.adb  util-beans-objects-to_access.adb  util-beans-objects-vectors.ads  util-beans-objects.adb  util-concurrent-arrays.adb  util-concurrent-arrays.ads  util-concurrent-fifos.adb  util-concurrent-pools.adb  util-concurrent-pools.ads  util-dates-formats.adb  util-dates-formats.ads  util-dates-iso8601.adb  util-dates.adb  util-dates.ads  util-encoders-base16.adb  util-encoders-base16.ads  util-encoders-base64.adb  util-encoders-base64.ads  util-encoders-hmac-sha1.adb  util-encoders-sha1.adb  util-encoders-sha1.ads  util-encoders.adb  (+74 more)
trunk/src/asm-none/: util-concurrent-counters.ads
trunk/src/asm-x86/: util-concurrent-counters.ads
trunk/src/http/: util-http-clients-mockups.adb  util-http-clients.adb  util-http-clients.ads  util-http-cookies.ads  util-http-mockups.ads  util-http-parts.ads  util-http-rest-rest_get_vector.adb  util-http-rest.adb  util-http-rest.ads  util-http.ads
trunk/src/http/aws/: util-http-clients-web.adb  util-http-clients-web.ads
trunk/src/http/curl/: util-http-clients-curl.adb  util-http-clients-curl.ads
trunk/src/os-linux/: util-processes-os.adb  util-processes-os.ads  util-streams-pipes.adb  util-streams-raw.adb  util-systems-dlls.adb  util-systems-dlls.ads  util-systems-os.ads
trunk/src/os-none/: util-processes-os.ads
trunk/src/os-win32/: util-processes-os.adb  util-processes-os.ads  util-systems-dlls.ads  util-systems-os.ads
trunk/src/xml/: util-serialize-io-xml.adb  util-serialize-io-xml.ads
trunk/support/: add-junit-result.sh  add-junit.xsl  aunit-to-junit.xsl  utilgen.c
trunk/testutil/: util-assertions.adb  util-test_caller.ads  util-tests-reporter.adb  util-tests-reporter.ads  util-tests-servers.adb  util-tests-servers.ads  util-tests.adb  util-tests.ads
trunk/testutil/ahven/: ahven-framework.adb  ahven-parameters.ads  ahven-tap_runner.adb  ahven-text_runner.adb  ahven-xml_runner.adb  ahven.ads  util-test_caller.adb  util-test_caller.ads  util-xunit.adb  util-xunit.ads
trunk/testutil/aunit/: util-assertions.adb  util-test_caller.adb  util-test_caller.ads  util-xunit.adb  util-xunit.ads
(+978 files in other folders)
