dnl Autoconf configure script for BfdAda
dnl Copyright 2001, 2002, 2003, 2005 Free Software Foundation, Inc.
dnl
dnl This file is part of BfdAda.
dnl 
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl 
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl 
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

dnl Process this file with autoconf to produce a configure script.

AC_INIT(src/util.ads)

AC_CANONICAL_SYSTEM
dnl AM_MAINTAINER_MODE
AC_EXEEXT

# Current release settings
UTIL_MAJOR_VERSION=1
UTIL_MINOR_VERSION=3
UTIL_MICRO_VERSION=1-dev
UTIL_VERSION=$UTIL_MAJOR_VERSION.$UTIL_MINOR_VERSION.$UTIL_MICRO_VERSION

# checking for local tools
AC_PROG_CC
# AM_PATH_GNAT
# AM_PATH_PERL
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_RANLIB

# Set the version number of GtkAda
AC_SUBST(UTIL_VERSION)
AC_SUBST(UTIL_MAJOR_VERSION)
AC_SUBST(UTIL_MINOR_VERSION)
AC_SUBST(UTIL_MICRO_VERSION)

EXEC_PREFIX="$prefix"
AC_SUBST(EXEC_PREFIX)

UTIL_LIBDIR="lib"
AC_SUBST(UTIL_LIBDIR)


AC_MSG_CHECKING([specific operating system sources])
case "${target_os}" in
     linux|linux-*|solaris*|sysv-*)
	src_os='src/os-linux'
	;;

     mingw32*|cygwin*)
	src_os='src/os-none'
	;;

     *)
	src_os='src/os-none'
	;;
esac
AC_MSG_RESULT(using $src_os)
UTIL_OS_DIR=$src_os
AC_SUBST(UTIL_OS_DIR)

AC_MSG_CHECKING([specific processor support])
case "${target}" in
  ## Intel 386 machines where we don't care about the manufacturer
  i[[3456]]86-*-* )
    src_asm='src/asm-x86'
    ;;

  *)
    src_asm='src/asm-none'
    ;;

esac
AC_MSG_RESULT(using $src_asm)
UTIL_ASM_DIR="$src_asm"
AC_SUBST(UTIL_ASM_DIR)

##########################################
# XMLAda library
##########################################

ac_xml_ada=xmlada-config
AC_MSG_CHECKING([xmlada library])
AC_ARG_WITH(xml,
AS_HELP_STRING([--with-xmlada=], [Enable XML serialization]),
[
  ac_xml_ada=${withval}/xmlada-config
  WITH_XML_ADA="with \"${withval}\";";
  UTIL_XML_DIR='src/xml';
],
[
  WITH_XML_ADA='';
  UTIL_XML_DIR='src';
])

ac_xml_version=`$ac_xml_ada --version 2>/dev/null | sed -e 's, ,-,g'`
case $ac_xml_version in
  XmlAda-3.2*)
      AC_MSG_RESULT($ac_xml_version)
      WITH_XML_ADA="with \"xmlada\";";
      UTIL_XML_DIR='src/xml';
      UTIL_XML_VERSION='3';
      ;;

  XmlAda-4.*)
      AC_MSG_RESULT($ac_xml_version)
      WITH_XML_ADA="with \"xmlada\";";
      UTIL_XML_DIR='src/xml';
      UTIL_XML_VERSION='4';
      ;;

  *)
      AC_MSG_RESULT(no)
      WITH_XML_ADA='';
      UTIL_XML_DIR='src';
      UTIL_XML_VERSION='none';
      ;;

esac

AC_MSG_RESULT(${WITH_XML})
AC_SUBST(WITH_XML_ADA)
AC_SUBST(UTIL_XML_DIR)
AC_SUBST(UTIL_XML_VERSION)

##########################################
# Test framework selection: aunit or ahven
##########################################

ac_enable_aunit=yes
AC_ARG_ENABLE(aunit,
[  --enable-aunit          Enable AUnit support for testutil library and Ada util unit tests],
[case "${enableval}" in
  no|none)  ac_enable_aunit= ;;
  *)        ac_enable_aunit=yes ;;
esac])dnl

UTIL_XUNIT_DIR=
UTIL_AUNIT_DIR=
WITH_AUNIT=

AC_MSG_CHECKING(whether AUnit support is enabled)
if test x$ac_enable_aunit = 'xyes'; then
  UTIL_AUNIT_DIR=testutil/aunit
  UTIL_XUNIT_DIR=testutil/aunit
  WITH_AUNIT="with \"aunit\";"
fi
AC_SUBST(WITH_AUNIT)
AC_SUBST(UTIL_AUNIT_DIR)
AC_SUBST(UTIL_XUNIT_DIR)
AC_MSG_RESULT($ac_enable_aunit)

AC_OUTPUT(
Makefile util.gpr testutil.gpr distrib/testutil.gpr distrib/util.gpr
)
